# hn-search-RAG

./: .gitignore  README.md  ecosystem.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
actix-frontend/: .env.dist  Cargo.toml  Dockerfile.actix-frontend  README.md  build.rs  tailwind.config.js
actix-frontend/src/: format_time.rs  formatting.rs  lib.rs  main.rs
actix-frontend/src/handlers/: mod.rs  page_handler.rs  search_handler.rs
actix-frontend/src/templates/: about.html  help.html  homepage.html  index.html
actix-frontend/src/templates/components/: advancedsearchsyntax.html  filterbar.html  howhardtobuild.html  searchmodes.html  searchresult.html  whymakethis.html
actix-frontend/static/: in.css  news.css
frontend/: .env.dist  .eslintrc.json  .prettierrc  Dockerfile  README.md  build.sh  deployment.yaml  ecosystem.config.js  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.tsx  index.css  index.tsx  types.ts
hackernews-ingest/: README.md
hackernews-ingest/backfill/: Dockerfile  backfill.py
hackernews-ingest/bulk_ingest/: Dockerfile  bulk_ingest.py  bulk_send.yaml
hackernews-ingest/comments_to_group/: README.md  bun.lockb  cronjob.yaml  index.ts  package.json
hackernews-ingest/get_dataset/: get-datasets.yaml  get_dataset.py
hackernews-ingest/set-ids/: Dockerfile  set-ids.yaml
hackernews-ingest/set-ids-for-comments/: Cargo.toml  set-ids.yaml
hn_datasets/: .gitignore  bulk_ingest.py  docker-compose.yml  get_dataset.py  hacker_news_comments.csv  hacker_news_stories.csv  ingest.py  read.ipynb  refresh_redis.py
hn_datasets/faster_refresh/: Cargo.toml
ingest/backfill/: backfill.py  backfill.yaml
ingest/comments_to_group/: Dockerfile  cronjob.yaml
solidjs-spa/: .env.dist  deployment.yaml  eslint.config.js  index.html  tsconfig.json
src/: App.tsx  index.css  types.ts
(+74 files in other folders)
