[package]
name = "hn-discovery-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-redoc = { version = "4.0", features = ["actix-web"] }
actix-files = "0.6.6"
actix-web = "4.9.0"
minijinja = { version = "2.1.2", features = ["loader"] }
trieve-client = "0.11.7"
actix-cors = "0.7.0"
serde = { version = "1.0.208", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = "0.11.27"
regex = "1.10.6"
chrono = "0.4.38"

[build-dependencies]
minijinja-embed = "2.1.2"
