[package]
name = "hn-discovery-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-redoc = { version = "4.0.0", features = ["actix-web"] }
actix-files = "0.6.6"
actix-web = "4.9.0"
minijinja-embed = "2.2.0"
minijinja = { version = "2.2.0", features = ["loader"] }
trieve-client = "0.11.7"
actix-cors = "0.7.0"
serde = { version = "1.0.209", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = "0.12.7"
regex = "1.10.6"
chrono = "0.4.38"
serde_json = "1.0.127"
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
] }
log = "0.4.22"

[build-dependencies]
minijinja-embed = "2.2.0"
